# iacs-viewer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  create_sample_data.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: __init__.py  config.py
app/templates/: index.html
data/: sample_iacs.gpkg  sample_iacs.parquet
iacs_viewer/: __init__.py  config.py  query_engine.py
iacs_viewer/models/: fields.py  resources.py  user.py
iacs_viewer/routes/: api.py  main.py  populate.py
iacs_viewer/static/: openapi.json
iacs_viewer/static/css/: style.css
iacs_viewer/static/js/: logic.js
iacs_viewer/templates/: base.html  index.html  swagger.html
