[project]
name = "iacs-viewer"
version = "0.2.0"
description = "Web-based viewer for IACS (Integrated Administration and Control System) agricultural parcel data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "duckdb>=1.0.0",
    "geopandas>=1.1.1",
    "pyarrow>=21.0.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.optional-dependencies]
postgres = [
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.1.0",
    "geoalchemy2>=0.17.1",
    "psycopg2-binary>=2.9.10",
]
